# r-burp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: ci.yml
src/: .gitignore  next.config.ts  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: certs.rs  commands.rs  error.rs  intercept.rs  lib.rs  proxy.rs  server.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/interceptor/: page.tsx
src/app/proxy/: page.tsx
src/app/requests/: page.tsx
src/app/settings/: page.tsx
src/components/layout/: app-layout.tsx  sidebar.tsx  status-bar.tsx
src/components/proxy/: request-inspector.tsx  request-list.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  index.ts  input.tsx  modal.tsx
src/lib/: tauri-api.ts  utils.ts
src/types/: index.ts
